--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ branches:
   only:
     - master
 env:
-  - LLVM_VERSION=3.5.0
+  - LLVM_VERSION=3.5.0  # default on Debian jessie
   - LLVM_VERSION=3.6.2
-  #- LLVM_VERSION=3.8.1
+  #- LLVM_VERSION=3.8.1  # default on Debian stretch - does NOT work yet
 addons:
   apt:
     sources:
       - boost-latest
       - ubuntu-toolchain-r-test
     packages:
-      - g++-4.9
+      - g++-4.9         # need at least this version of libstdc++6
       - libc6
       - libc6-dev
       - libstdc++-4.9-dev
@@ -23,7 +23,7 @@ addons:
       - libffi-dev
       - libboost-test1.55-dev
       - valgrind
-      - libedit-dev # required by LLVM 3.5.0
+      - libedit-dev     # required by LLVM 3.5.0
 before_script:
   - ./travis/install_deps.sh
   - export LLVM_DIR=$PWD/cache/clang+llvm-$LLVM_VERSION
@@ -32,9 +32,8 @@ before_script:
   - export CPATH=/usr/lib/gcc/x86_64-linux-gnu/4.9/include
   - export CC=gcc-4.9
   - export CXX=g++-4.9
-  #- export CXXFLAGS=-Wno-unknown-warning-option
   - autoreconf --install
-  - ./configure #|| cat config.log
+  - ./configure         # || cat config.log    # left for debugging
   - make -j6
 script: "make test && make valtest"
 cache:
