--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
       - autoconf
       - automake
       - python3
-      - llvm-dev
+      - libclang-dev
       - libffi-dev
       - libboost-test1.55-dev
       - valgrind
